--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.5",
     "reactstrap": "^6.4.0",
-    "redux": "^4.0.0",
-    "union-type": "^0.4.1"
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
