--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scripts": "1.1.5",
     "reactstrap": "^6.4.0",
     "redux": "^4.0.0",
+    "redux-undo": "^1.0.0-beta9-9-7",
     "uuid": "^3.3.2"
   },
   "scripts": {
