--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "deco-scope",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://adrymne.github.io/deco-scope",
   "dependencies": {
     "bootstrap": "^4.1.3",
     "downshift": "^2.2.2",
+    "gh-pages": "^1.2.0",
     "match-sorter": "^2.3.0",
     "ramda": "^0.25.0",
     "react": "^16.4.2",
@@ -18,6 +20,8 @@
     "uuid": "^3.3.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
