--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "homepage": "https://adrymne.github.io/deco-scope",
   "dependencies": {
+    "@material-ui/core": "^3.0.3",
+    "@material-ui/icons": "^3.0.1",
     "bootstrap": "^4.1.3",
     "downshift": "^2.2.2",
     "gh-pages": "^1.2.0",
