--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^3.0.3",
     "@material-ui/icons": "^3.0.1",
+    "@material-ui/lab": "^3.0.0-alpha.15",
     "bootstrap": "^4.1.3",
     "downshift": "^2.2.2",
     "gh-pages": "^1.2.0",
